--- a/scss/partials/pages/_common.scss
+++ b/scss/partials/pages/_common.scss
@@ -26,7 +26,7 @@
 }
 
 .header {
-    &-image {
+    &-bar {
         position: relative;
         background-color: $theme;
         height: 60px;
